<resources>
    <string name="app_name">DragonBall</string>
    <string name="user_field_text">Username…</string>
    <string name="password_field_text">Password…</string>
    <string name="remember_user">Remember me</string>
    <string name="login_button">Login</string>
    <string name="hero_image">Hero image</string>
    <string name="forget">Forget</string>
    <string name="make_favorite">Make favorite</string>
    <string name="hero_locations_in_map">Hero locations in map</string>
</resources>