<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gokubg"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <include
        android:id="@+id/loading_spinner"
        layout="@layout/activity_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-24dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="-24dp"
        android:layout_marginBottom="-24dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparentBlack"
        app:cardCornerRadius="22dp"
        app:cardElevation="0dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="emailAddress"
                android:hint="@string/user_field_text"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColorGray"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password_field_text"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColorGray"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:buttonTint="@color/white"
        android:text="@string/remember_user"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        app:backgroundTint="@color/orangeDragonBall"
        app:cornerRadius="18dp" />

</LinearLayout>