<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucent_black"
        android:padding="24dp"
        tools:context=".ui.details.DetailsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/hero_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orangeDragonBall"
                android:contentDescription="@string/hero_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/hero_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            tools:text="Maestro Roshi" />


        <ImageButton
            android:id="@+id/favorite"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/make_favorite"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ball"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/hero_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/hero_name"
            app:layout_constraintStart_toStartOf="@+id/hero_name"
            app:layout_constraintTop_toBottomOf="@+id/hero_name"
            tools:text="Es un maestro de artes marciales que tiene una escuela, donde entrenará a Goku y Krilin para los Torneos de Artes Marciales. Aún en los primeros episodios había un toque de tradición y disciplina, muy bien representada por el maestro. Pero Muten Roshi es un anciano extremadamente pervertido con las chicas jóvenes, una actitud que se utilizaba en escenas divertidas en los años 80. En su faceta de experto en artes marciales, fue quien le enseñó a Goku técnicas como el Kame Hame Ha" />

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/text_margin"
            android:contentDescription="@string/hero_locations_in_map"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintTop_toBottomOf="@id/hero_description"
            tools:layout_editor_absoluteX="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>